feat: fetch benchmark command from observability api
